Changes to proxytunnel version 1.8.0 -- TBD

- Added passfile options to read username/password from a file
- Moved manual-page from debian/ to / in source-tree

Changes to proxytunnel version 1.7.2 -- Mon Jul 30 10:18:26 CEST 2007

- Fixed buffer/malloc issue
- Clean-up usage info/help text
- Remove spurious syslog

Changes to proxytunnel version 1.7.1 -- Thu Apr 12 13:40:27 CEST 2007

- Cygwin SO_REUSEPORT stuff by Marc Heuse
- Fix some string-handling related core-dumps
- NTLM/SSL fixes by Taco IJsselmuiden <taco@varda.nl>
- NTLM fixes by Taco IJsselmuiden <taco@varda.nl>

Changes to proxytunnel version 1.7.0 -- Sun Feb 25 17:45:38 CET 2007

- Allow multiple '-H' options (headers), total size of the headers
  should not exceed 1k.
- Reworked setproctitle calls, giving an argument to -x should now
  really hide all traces of the original name, not only the arguments
  Also remove argument-info on normal (without -x) runs.
- Suggested changes (From Dag Wieers) to install-target applied 
- Change debug-output line-endings
- Change error message on 'connection closed' in analyze_HTTP
- Reworked debug-output (dag-)
- Signal handling (dag-)
- Applied (reworked) changes from Mark Cave-Ayland to support -E option
  encrypting data to the proxy with SSL

Changes to proxytunnel version 1.6.3 -- Mon Apr 10 12:48:02 CEST 2006

- Replaced call to getpass to getpass_x, which comes from openssh's
  readpassphrase.c. This should handle longer passwords on systems
  with broken (crappy) getpass calls (solaris/hpux)

Changes to proxytunnel version 1.6.2 -- Wed Mar  8 10:08:53 CET 2006

- Fix NTLM in stand-alone mode

Changes to proxytunnel version 1.6.1 -- Sat Feb 25 14:45:25 CET 2006

- FOSDEM build (www.fosdem.org)
- Do setproctitle and ssl stuff on 'standalone' mode too
- Changed scanning/malloc's for proxy-hostname, we could overflow there
- Ripped out setproctitle and replaced it with openssh's code from
  openbsd-compat/setproctitle.c, also took in strlcat/strlcpy